# p3_budman

./: .gitignore  All.category_map.toml  PyExcelBudget.code-workspace  README.md  bash.exe.stackdump  budget_model_config.jsonc  budget_model_logging_config.jsonc  budman_cmd_history.txt  config.py  copy_dawio_files.sh  debug_patch.py  level1.txt  level2.txt  level3.txt  level_1_categories.txt  level_2_categories.csv  level_2_categories.txt  level_3_categories.txt  main.py  mylogger.py  p3_budman.code-workspace  p3_budman_c4_architecture.md  p3_budman_uml_class_diagram.md  p3_excel_budget.code-workspace  pyproject.toml  pyrightconfig.json  pytest.ini  requirements.txt  settings.toml  settings_example.toml  show_categories.py  tach.toml  txn_cats_history.txt
.VSCodeCounter/2025-05-01_14-37-35/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-19_10-17-19/: details.md  diff-details.md  diff.csv  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-19_10-20-24/: details.md  diff-details.md  diff.md  diff.txt  results.csv  results.json  results.md  results.txt
.VSCodeCounter/2025-06-23_10-47-42/: details.md  diff-details.md  diff.csv  diff.md  (+5 more)
logging_configs/: at_log_config.json  queued-stderr-json-file.jsonc  stderr-json-file.json  stderr-json-file.jsonc  stdout.jsonc
src/: __init__.py  budmod.py  main.py  p3ExcelBudgetConstants.py  p3_excel_budget_constants.py
tests/: pytest.ini  test_budman_settings.py  test_excel_budget_model.py  test_main.py
(+272 files in other folders)
