[project]
name = "p3_budget_model"
dynamic = ["version"]
description = "A budget modelling tool for excel workbooks."
readme = "README.md"
requires-python = ">=3.13"
license = "MIT"
license-files = ["LICEN[CS]E*"]

[build-system]
requires = ["setuptools>=78", "wheel"]
build-backend = "setuptools.build_meta"

[project.urls]
Homepage = "https://github.com/ppainterpython/p3_execl_budget"
